# irrigation-need-mlops

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
configs/: train_config.yaml
docs/: RUNBOOK_drift_loop.md  RUNBOOK_promote.md
monitoring/: prometheus.yml  reference_data.csv
monitoring/grafana/dashboards/: irrigation_api.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
reports/: champion_vs_challenger.json  metrics.json
src/: eda_updated.py
src/data/: feature_engineering.py  feature_functions.py  features.py  preprocess.py  run_features.py
src/models/: baseline_runner.py  evaluate.py  export.py  register_ensemble.py  train.py
src/ops/: compare_models.py  drift_loop.py  drift_report.py  make_reference.py  promote.py
src/serving/: IrrigationEnsemble.py  app.py
tests/: test_api.py  test_features.py  test_preprocess.py
