[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-tabular-classification-pipeline"
version = "0.1.0"
description = "Production-grade ML pipeline for tabular classification — Kaggle to deployment"
requires-python = ">=3.11"
dependencies = [
    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "pandas>=2.2",
    "numpy>=1.26",
    # Experiment tracking & data versioning
    "mlflow>=2.12",
    "dvc>=3.49",
    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    # ONNX
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "skl2onnx>=1.16",
    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",   # for FastAPI test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
